--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-  <link rel="stylesheet" href="./assest/css/index.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <img src="./assest/img/bg/02-109.jpg" class="balck">
+    <img src="/img/bg/02-109.jpg" class="balck">
 
   <div class="button-container">
     <div class="customer"></div>
-    <a href="./page/Login.html" class="btn"><i class="fa-solid fa-cart-shopping"><span>ผู้ซื้อ</span></i></a>
-    <a href="./page/Login.html" class="btn2"><i class="fa-solid fa-sack-dollar"><span>ผู้ขาย</span></i></a>
+    <a href="/login.html" class="btn"><i class="fa-solid fa-cart-shopping"><span>ผู้ซื้อ</span></i></a>
+    <a href="/login.html" class="btn2"><i class="fa-solid fa-sack-dollar"><span>ผู้ขาย</span></i></a>
   </div>
 </body>
 </html>
