--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Login Form</title>
-    <link rel="stylesheet" href="../assest/css/login.css" />
+    <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -20,11 +20,11 @@
           <div class="underline"></div>
         </div>
         <div class="input-box button">
-          <button class="login" type="button" onclick="window.location.href='./Home.html'">ลงชื่อเข้าใช้</button>
+          <button class="login" type="button" onclick="window.location.href='/home.html'">ลงชื่อเข้าใช้</button>
         </div>
         
         <div class="input-box button">
-          <span>ยังไม่มีบัญชี SPU ชั้น 2 ใช่หรือไม่ <a href="./Register.html" class="register">สมัครสมาชิค</a></span>
+          <span>ยังไม่มีบัญชี SPU ชั้น 2 ใช่หรือไม่ <a href="/register.html" class="register">สมัครสมาชิค</a></span>
         </div>
       </form>
 
