--- a/products.html
+++ b/products.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPU ชั้น 2</title>
 
-    <link rel="stylesheet" href="../assest/css/Global.css">
-    <link rel="stylesheet" href="../assest/css/Home.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/products.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -14,23 +14,23 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="./Home.html"><img src="../assest/img/logo/Logo SPU SIT_White.png" width="200px" alt="logo"></a>
+                <a href="/home.html"><img src="/img/logo/Logo SPU SIT_White.png" width="200px" alt="logo"></a>
             </div>
             <ul class="menu">
-                <li><a href="./Home.html">หน้าหลัก</a></li>
-                <li><a href="./Products.html">สินค้า</a></li>
+                <li><a href="/home.html">หน้าหลัก</a></li>
+                <li><a href="/products.html">สินค้า</a></li>
                 <li><a href="#">ติดต่อ</a></li>
                 <li><span><i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="ค้นหา..." id="nav-search-input"></span></li>
             </ul>
             <ul class="menu_2">
                 <li><a id="cart-icon" href="#"><i class="fa-solid fa-cart-shopping"></i>ตะกร้าสินค้า<span id="cart-count">0</span></a></li>
-                <li><a href="./Favorite.html"><i id="favPage" class="fa-solid fa-heart"></i>ถูกใจ<span id="fav-count">0</span></a></li>
+                <li><a href="/favorite.html"><i id="favPage" class="fa-solid fa-heart"></i>ถูกใจ<span id="fav-count">0</span></a></li>
                 <li class="nav-user-menu"> 
-                    <a href="./Login.html" id="auth-link">
-                        <i class="fa-solid fa-user-check"></i> Phanu
+                    <a href="/login.html" id="auth-link">
+                        <i class="fa-solid fa-user-check"></i> User
                     </a>
                     <ul class="dropdown-menu" id="user-dropdown">
-                        <li><a href="./Saller.html"><i class="fa-solid fa-store"></i> สำหรับผู้ขาย</a></li>
+                        <li><a href="/seller.html"><i class="fa-solid fa-store"></i> สำหรับผู้ขาย</a></li>
                         <li><a href="#" id="logout-btn"><i class="fa-solid fa-right-from-bracket"></i> ออกจากระบบ</a></li>
                     </ul>
                 </li>
@@ -57,18 +57,14 @@
     </nav>
 
     <header>
-        <div class="container">
-            <div class="title">
-                <h2>สินค้าใหม่</h2>
-            </div>
-            <div class="product">
-                <div class="product-items" id="new_product_container">
-                    </div>
-            </div>
-        </div>
-     </header>
+      <div class="container">
+          <h2 class="title">🛍️ สินค้าทั้งหมด</h2>
+          <div id="product_container" class="product-items">
+              </div>
+      </div>
+    </header>
 
-     <div class="chat-box" id="chatBox">
+    <div class="chat-box" id="chatBox">
         <div class="chat-header">
             <p>💬 ผู้ขาย</p>
             <button onclick="messengerClose()" id="closeChatBtn" type="button"><i class="fa-solid fa-xmark"></i></button>
@@ -88,11 +84,10 @@
         <button id="messenger" type="button"><i class="fa-brands fa-facebook-messenger"></i></button>
     </div>
 
-    <div id="textBox">
-        </div>
+    <div id="textBox"></div>
 
-    <script src="../assest/js/Data.js"></script>
-    <script src="../assest/js/Shared.js"></script>
-    <script src="../assest/js/Home.js"></script>
+    <script src="/js/data.js"></script>
+    <script src="/js/shared.js"></script>
+    <script src="/js/products.js"></script>
 </body>
 </html>
