--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Register Form</title>
-    <link rel="stylesheet" href="../assest/css/register.css" />
+    <link rel="stylesheet" href="/css/register.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -27,11 +27,11 @@
         </div>
 
         <div class="input-box button">
-          <button class="signUp" type="button" onclick="window.location.href='./Login.html'">สมัครสมาชิค</button>
+          <button class="signUp" type="button" onclick="window.location.href='/login.html.html'">สมัครสมาชิค</button>
         </div>
 
         <div class="input-box button">
-           <span>มีบัญชี SPU ชั้น 2 อยู่แล้ว? <a href="./Login.html" class="signIn">ลงชื่อเข้าใช้</a></span>
+           <span>มีบัญชี SPU ชั้น 2 อยู่แล้ว? <a href="/login.html" class="signIn">ลงชื่อเข้าใช้</a></span>
         </div>
       </form>
     </div>
