--- a/seller.html
+++ b/seller.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="../assest/css/Seller.css">
+  <link rel="stylesheet" href="/css/seller.css">
   <title>ลงขายสินค้า</title>
 </head>
 <body>
@@ -29,8 +29,8 @@
   </div>
 
 
-  <script src="../assest/js/Data.js"></script>
-  <script src="../assest/js/Shared.js"></script>
-  <script src="../assest/js/Seller.js"></script>
+  <script src="/js/data.js"></script>
+  <script src="/js/shared.js"></script>
+  <script src="/js/seller.js"></script>
 </body>
 </html>
