--- a/favorite.html
+++ b/favorite.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPU ชั้น 2</title>
 
-    <link rel="stylesheet" href="../assest/css/Global.css">
-    <link rel="stylesheet" href="../assest/css/Favorite.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/favorite.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -14,23 +14,23 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="./Home.html"><img src="../assest/img/logo/Logo SPU SIT_White.png" width="200px" alt="logo"></a>
+                <a href="/home.html"><img src="/img/logo/Logo SPU SIT_White.png" width="200px" alt="logo"></a>
             </div>
             <ul class="menu">
-                <li><a href="./Home.html">หน้าหลัก</a></li>
-                <li><a href="./Products.html">สินค้า</a></li>
+                <li><a href="/home.html">หน้าหลัก</a></li>
+                <li><a href="/products.html">สินค้า</a></li>
                 <li><a href="#">ติดต่อ</a></li>
                 <li><span><i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="ค้นหา..." id="nav-search-input"></span></li>
             </ul>
             <ul class="menu_2">
                 <li><a id="cart-icon" href="#"><i class="fa-solid fa-cart-shopping"></i>ตะกร้าสินค้า<span id="cart-count">0</span></a></li>
-                <li><a href="./Favorite.html"><i id="favPage" class="fa-solid fa-heart"></i>ถูกใจ<span id="fav-count">0</span></a></li>
+                <li><a href="/favorite.html"><i id="favPage" class="fa-solid fa-heart"></i>ถูกใจ<span id="fav-count">0</span></a></li>
                 <li class="nav-user-menu"> 
-                    <a href="./Login.html" id="auth-link">
-                        <i class="fa-solid fa-user-check"></i> Phanu
+                    <a href="/login.html" id="auth-link">
+                        <i class="fa-solid fa-user-check"></i> User
                     </a>
                     <ul class="dropdown-menu" id="user-dropdown">
-                        <li><a href="./Saller.html"><i class="fa-solid fa-store"></i> สำหรับผู้ขาย</a></li>
+                        <li><a href="/seller.html"><i class="fa-solid fa-store"></i> สำหรับผู้ขาย</a></li>
                         <li><a href="#" id="logout-btn"><i class="fa-solid fa-right-from-bracket"></i> ออกจากระบบ</a></li>
                     </ul>
                 </li>
@@ -66,7 +66,7 @@
             <div id="emptytext" class="empty"></div>
                 
             <div class="img">
-                <img src="../assest/img/logo/Logo SPU SIT_Color.png" alt="" class="logo">
+                <img src="/img/logo/Logo SPU SIT_Color.png" alt="" class="logo">
             </div>
         </div>
     </header>
@@ -93,8 +93,8 @@
 
     <div id="textBox"></div>
 
-    <script src="../assest/js/Data.js"></script>
-    <script src="../assest/js/Shared.js"></script>
-    <script src="../assest/js/Favorite.js"></script>
+    <script src="/js/data.js"></script>
+    <script src="/js/shared.js"></script>
+    <script src="/js/favorite.js"></script>
 </body>
 </html>
