--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
                 <div class="footer">
                     <p id="total-price">รวมทั้งหมด: 0 บาท</p>
                     <div class="btn">
-                        <button class="clear" onclick="clearCart()" type="button">ลบทั้งหมด</button>
+                        <button class="clear" type="button">ลบทั้งหมด</button>
                         <button class="submit" type="button" onclick="messengerBox()">ติดต่อผู้ขาย</button>
                     </div>
                 </div>
