update home product favorite seller html and favorite seller shared js and create chat html css  js

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <ul class="menu">
                 <li><a href="/home.html">หน้าหลัก</a></li>
                 <li><a href="/products.html">สินค้า</a></li>
-                <li><a href="#">ติดต่อ</a></li>
+                <li><a href="/chat.html">แชท</a></li>
                 <li><span><i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="ค้นหา..." id="nav-search-input"></span></li>
             </ul>
             <ul class="menu_2">
