--- a/seller.html
+++ b/seller.html
@@ -6,7 +6,7 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="/css/seller.css">
-  <title>ลงขายสินค้า</title>
+  <title>ลงขายสินค้า | SPU ชั้น 2</title>
 </head>
 <body>
   <div class="form-container">
