--- a/favorite.html
+++ b/favorite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPU ชั้น 2</title>
+    <title>ถูกใจ | SPU ชั้น 2</title>
 
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/favorite.css">
@@ -19,7 +19,7 @@
             <ul class="menu">
                 <li><a href="/home.html">หน้าหลัก</a></li>
                 <li><a href="/products.html">สินค้า</a></li>
-                <li><a href="#">ติดต่อ</a></li>
+                <li><a href="/chat.html">แชท</a></li>
                 <li><span><i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="ค้นหา..." id="nav-search-input"></span></li>
             </ul>
             <ul class="menu_2">
