--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
                     <p id="total-price">รวมทั้งหมด: 0 บาท</p>
                     <div class="btn">
                         <button class="clear" type="button">ลบทั้งหมด</button>
-                        <button class="submit" type="button" onclick="messengerBox()">ติดต่อผู้ขาย</button>
+                        <button class="submit" type="button" onclick="window.location.href='/chat.html'">ติดต่อผู้ขาย</button>
                     </div>
                 </div>
             </div>
