--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="input-box button">
-          <button class="signUp" type="button" onclick="window.location.href='/login.html.html'">สมัครสมาชิค</button>
+          <button class="signUp" type="button" onclick="window.location.href='/login.html'">สมัครสมาชิค</button>
         </div>
 
         <div class="input-box button">
