update chat.html add div id textBox

--- a/chat.html
+++ b/chat.html
@@ -105,6 +105,8 @@
         
     </div>
 
+    <div id="textBox"></div>
+
     <script src="/js/data.js"></script>
     <script src="/js/shared.js"></script>
     <script src="/js/chat.js"></script> </body>
