--- a/home.html
+++ b/home.html
@@ -88,8 +88,7 @@
         <button id="messenger" type="button"><i class="fa-brands fa-facebook-messenger"></i></button>
     </div>
 
-    <div id="textBox">
-        </div>
+    <div id="textBox"></div>
 
     <script src="/js/data.js"></script>
     <script src="/js/shared.js"></script>
