update path login.html index.html  and  add  tag a in seller.html add css on seller.css

--- a/seller.html
+++ b/seller.html
@@ -25,6 +25,7 @@
       <button type="button" id="submit-all-btn">
         <i class="fa-solid fa-check-circle"></i> วางขายสินค้าทั้งหมด
       </button>
+      <a href="/home.html" id="backToHome">กลับสู่หน้าหลัก</a>
     </div>
   </div>
 
