--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div class="button-container">
     <div class="customer"></div>
-    <a href="/login.html" class="btn"><i class="fa-solid fa-cart-shopping"><span>ผู้ซื้อ</span></i></a>
-    <a href="/login.html" class="btn2"><i class="fa-solid fa-sack-dollar"><span>ผู้ขาย</span></i></a>
+    <a href="/home.html" class="btn"><i class="fa-solid fa-cart-shopping"><span>ผู้ซื้อ</span></i></a>
+    <a href="/seller.html" class="btn2"><i class="fa-solid fa-sack-dollar"><span>ผู้ขาย</span></i></a>
   </div>
 </body>
 </html>
