--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
           <div class="underline"></div>
         </div>
         <div class="input-box button">
-          <button class="login" type="button" onclick="window.location.href='/home.html'">ลงชื่อเข้าใช้</button>
+          <button class="login" type="button" onclick="window.location.href='/index.html'">ลงชื่อเข้าใช้</button>
         </div>
         
         <div class="input-box button">
