--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-  <link rel="stylesheet" href="css/index.css">
-</head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Login Form</title>
+    <link rel="stylesheet" href="/css/login.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div class="container">
+      <form action="#">
+        <div class="title">ลงชื่อเข้าใช้</div>
+        <div class="input-box underline">
+          <input type="text" placeholder="อีเมล์" required />
+          <div class="underline"></div>
+        </div>
+        <div class="input-box">
+          <input type="password" placeholder="รหัสผ่าน" required />
+          <div class="underline"></div>
+        </div>
+        <div class="input-box button">
+          <button class="login" type="button" onclick="window.location.href='/index.html'">ลงชื่อเข้าใช้</button>
+        </div>
+        
+        <div class="input-box button">
+          <span>ยังไม่มีบัญชี SPU ชั้น 2 ใช่หรือไม่ <a href="/register.html" class="register">สมัครสมาชิค</a></span>
+        </div>
+      </form>
 
-<body>
-    <img src="/img/bg/02-109.jpg" class="balck">
-
-  <div class="button-container">
-    <div class="customer"></div>
-    <a href="/home.html" class="btn"><i class="fa-solid fa-cart-shopping"><span>ผู้ซื้อ</span></i></a>
-    <a href="/seller.html" class="btn2"><i class="fa-solid fa-sack-dollar"><span>ผู้ขาย</span></i></a>
-  </div>
-</body>
+      <div class="option">หรือลงชื่อเข้าใช้ด้วย</div>
+      <div class="twitter">
+        <a href="#"><i class="fab fa-twitter"></i>ลงชื่อเข้าใช้ด้วย Twitter</a>
+      </div>
+      <div class="facebook">
+        <a href="#"><i class="fab fa-facebook-f"></i>ลงชื่อเข้าใช้ด้วย Facebook</a>
+      </div>
+    </div>
+    </body>
 </html>
