fix path index.html,register and logout btn in share.js
index.html คือหน้าล็อคอิน

--- a/register.html
+++ b/register.html
@@ -27,11 +27,11 @@
         </div>
 
         <div class="input-box button">
-          <button class="signUp" type="button" onclick="window.location.href='/login.html'">สมัครสมาชิค</button>
+          <button class="signUp" type="button" onclick="window.location.href='/index.html'">สมัครสมาชิค</button>
         </div>
 
         <div class="input-box button">
-           <span>มีบัญชี SPU ชั้น 2 อยู่แล้ว? <a href="/login.html" class="signIn">ลงชื่อเข้าใช้</a></span>
+           <span>มีบัญชี SPU ชั้น 2 อยู่แล้ว? <a href="/index.html" class="signIn">ลงชื่อเข้าใช้</a></span>
         </div>
       </form>
     </div>
